--- a/index.html
+++ b/index.html
@@ -1,178 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hamza Atılgan Front End Developer</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="wrap">
-      <div class="comp">
-        <div class="monitor">
-          <div class="mid">
-            <div class="site">
-              <div class="topbar">
-                <div class="cerrar">
-                  <div class="circl"></div>
-                  <div class="circl"></div>
-                  <div class="circl"></div>
+
+<head>
+    <title>Hamza ATILGAN | Front-End Developer</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="owner" content="Cüneyd BÖLÜKOĞLU">
+    <meta name="Copyright" content="(c) 2020">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link rel="stylesheet" href="assets/css/fullpage.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+
+    <header>
+        <nav class="animated bounceInDown faster">
+            <div class="logo">
+                <a href="#home-section">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 612 792"
+                        style="enable-background:new 0 0 612 792;" xml:space="preserve">
+                        <path d="M536.17,446.73c-6.33-12.94-14.6-24.56-24.78-34.7c-11.85-11.81-25.36-21.19-40.76-28.09c-15.25-6.83-31-11.26-47.62-11.55
+	c-27.34-0.48-54.7-0.24-82.05-0.31c-6.73-0.02-7.93-1.13-7.95-7.78c-0.05-15.17-0.02-30.34-0.02-45.51c0.13,0,0.26,0,0.39,0
+	c0-15.33-0.05-30.67,0.03-46c0.02-3.94-1.17-6.42-5.6-6.4c-14.21,0.05-28.42,0.07-42.63,0.02c-4.24-0.02-5.22,2.19-5.24,6.02
+	c-0.17,29.49-0.51,58.99-0.75,88.48c-0.06,6.81-1.2,8.06-8.21,8.06c-22.34,0.02-44.67-0.01-67.01,0.01
+	c-16.33,0.01-32.01-2.1-46.66-10.37c-16.45-9.28-27.99-22.43-35.6-39.55c-5.69-12.79-6.28-26.16-5.4-39.68
+	c1.05-16.16,7.8-30.14,18.14-42.35c10.92-12.9,24.5-21.69,40.99-26.1c14.99-4.01,29.77-4.43,44.7,0.11
+	c4.82,1.47,9.72,4.14,14.97,1.45c4.28-2.19,8.48-4.52,12.69-6.84c9.6-5.3,19.2-10.59,28.74-15.98c1.61-0.91,4.29-2.57,4.12-3.43
+	c-0.38-1.96-1.82-4.32-3.53-5.32c-8.7-5.08-17.48-10.07-26.49-14.56c-14.84-7.39-30.97-9.94-47.27-10.66
+	c-20.45-0.9-40.16,2.84-59.19,10.83c-14.94,6.27-28.16,15-39.85,25.92c-20.2,18.88-33.24,41.8-38.77,69.21
+	c-6.15,30.49-1.75,59.28,12.38,86.57c9.75,18.83,23.39,34.56,40.86,46.92c20.33,14.38,42.84,23.46,67.56,24.63
+	c27.85,1.32,55.81,0.5,83.72,0.59c9.54,0.03,10.03,0.51,10.06,10.3c0.06,26.17-0.31,52.35,0.3,78.51
+	c0.53,22.7,7.25,43.89,19.04,63.28c11.24,18.49,26.36,33.13,44.89,44.47c20.69,12.66,43.01,18.76,67.16,19.41
+	c25.24,0.67,48.99-4.57,70.78-17.25c22.04-12.82,38.98-30.64,51.17-53.26c10.04-18.63,14.74-38.5,15.52-59.28
+	C549.82,485.67,545.4,465.6,536.17,446.73z M495.64,518.36c-2.73,17.47-11.17,32.57-24.32,44.72
+	c-20.08,18.56-44.07,25.37-70.6,21.11c-19.51-3.13-36.26-12.5-49.2-28.12c-12.88-15.54-19.23-33.08-18.55-53.3
+	c0.35-10.32,0.06-20.67,0.06-31c0.02,0,0.03,0,0.05,0c0-13,0.03-26-0.01-39c-0.03-7.52,1.18-8.88,8.53-8.89
+	c22.33-0.03,44.67-0.21,67,0.08c8.46,0.11,17.14,0.36,25.32,2.27c17.61,4.1,32.44,13.39,44.13,27.33
+	C493.87,472.43,499.38,494.45,495.64,518.36z" />
+                    </svg>
+
+                </a>
+            </div>
+            <div class="nav-menu">
+                <a href="#about">About</a>
+                <a href="https://github.com/hamzaatilgan" target="_blank">Project</a>
+                <a href="mailto:hmzatlgn@gmail.com">Contact</a>
+            </div>
+        </nav>
+    </header>
+
+    <div class="fullpage">
+        <section class="home-section section">
+            <div class="container">
+                <div class="content-lt">
+                    <canvas id="c"></canvas>
                 </div>
-              </div>
-              <div class="inhead">
-                <div class="mid">
-                  <div class="item"></div>
+                <div class="content-rt animated bounceInRight faster">
+                    <h1>Hamza ATILGAN</h1>
+                    <h2>Front-End Developer</h2>
                 </div>
-                <div class="mid txr">
-                  <div class="item"></div>
-                  <div class="item"></div>
-                  <div class="item"></div>
-                  <div class="item"></div>
-                </div>
-              </div>
-              <div class="inslid"></div>
-              <div class="incont">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="wid">
-                  <div class="itwid">
-                    <div>
-                      <div class="contfoot"></div>
+
+            </div>
+        </section>
+
+        <section class="about section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="assets/img/macbook.jpeg" alt="">
                     </div>
-                  </div>
-                  <div class="itwid">
-                    <div>
-                      <div class="contfoot"></div>
+                    <div class="col-md-6">
+                        <h3>About Me.</h3>
+                        <p>Hi, I'm Hamza. I am a <b>Front-end developer,</b>
+                            I create great sites and web applications with HTML and CSS and decorate them with
+                            <b>Javascript.</b>
+                        </p>
+                        <p>Photoshop, Sketch, Adobe XD, Figma, Zeplin etc. I create responsive and mobile compatible
+                            products by using BOOTSTRAP technologies. You can follow my works on <b><a class="link_a"
+                                    href="https://github.com/hamzaatilgan">GitHub</a></b> and
+                            <b><a class="link_a" href="https://codepen.io/Hamza-Atlgan">CodePen</a>.</b>
+                        </p>
+                        <a href="#" target="_download"> <svg version="1.1" id="Capa_1"
+                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                                y="0px" fill="white" width="18px" viewBox="0 0 471.2 471.2"
+                                style="enable-background:new 0 0 471.2 471.2;" xml:space="preserve">
+                                <g>
+                                    <g>
+                                        <path d="M457.7,230.15c-7.5,0-13.5,6-13.5,13.5v122.8c0,33.4-27.2,60.5-60.5,60.5H87.5c-33.4,0-60.5-27.2-60.5-60.5v-124.8
+                                   c0-7.5-6-13.5-13.5-13.5s-13.5,6-13.5,13.5v124.8c0,48.3,39.3,87.5,87.5,87.5h296.2c48.3,0,87.5-39.3,87.5-87.5v-122.8
+                                   C471.2,236.25,465.2,230.15,457.7,230.15z" />
+                                        <path d="M226.1,346.75c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4l85.8-85.8c5.3-5.3,5.3-13.8,0-19.1c-5.3-5.3-13.8-5.3-19.1,0l-62.7,62.8
+                                   V30.75c0-7.5-6-13.5-13.5-13.5s-13.5,6-13.5,13.5v273.9l-62.8-62.8c-5.3-5.3-13.8-5.3-19.1,0c-5.3,5.3-5.3,13.8,0,19.1
+                                   L226.1,346.75z" />
+                                    </g>
+                                </g>
+                            </svg> Download CV</a>
+
+                        <div class="social_link mb-5 mt-5">
+                            <a href="https://github.com/hamzaatilgan"><i class="fab fa-github"></i></a>
+                            <a href="https://codepen.io/Hamza-Atlgan"><i class="fab fa-codepen"></i></a>
+                            <a href="https://www.linkedin.com/in/hamza-atilgan-4953471ba/"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                        </div>
                     </div>
-                  </div>
-                  <div class="itwid">
-                    <div>
-                      <div class="contfoot"></div>
-                    </div>
-                  </div>
-                  <div class="clearfix"></div>
                 </div>
-                <div class="infoot"></div>
-              </div>
             </div>
-          </div>
-          <div class="mid codigo">
-            <div class="line">
-              <div class="item var"></div>
-              <div class="item cont"></div>
-              <div class="clearfix"></div>
+        </section>
+
+        <footer>
+            <div class="social_link animated bounceInUp faster">
+                <a href="https://github.com/cuneydbolukoglu"><i class="fab fa-github"></i></a>
+                <a href="https://codepen.io/cuneyd"><i class="fab fa-codepen"></i></a>
+                <a href="https://www.linkedin.com/in/cuneydbolukoglu/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:cuneydbolukogluu@gmail.com"><i class="far fa-envelope"></i></a>
             </div>
-            <div class="line">
-              <div class="item min var"></div>
-              <div class="item min fun"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line">
-              <div class="item min var"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line">
-              <div class="item var"></div>
-              <div class="item atr"></div>
-              <div class="item cont"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab1">
-              <div class="item min atr"></div>
-              <div class="item lrg fun"></div>
-              <div class="item min fun"></div>
-              <div class="item lrg cont"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab1">
-              <div class="item lrg atr"></div>
-              <div class="item min fun"></div>
-              <div class="item min cont"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab1">
-              <div class="item atr"></div>
-              <div class="item min fun"></div>
-              <div class="item atr"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab1">
-              <div class="item min atr"></div>
-              <div class="item min cont"></div>
-              <div class="item lrg atr"></div>
-              <div class="item fun"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab1">
-              <div class="item min atr"></div>
-              <div class="item lrg fun"></div>
-              <div class="item lrg cont"></div>
-              <div class="item min fun"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab1">
-              <div class="item min var"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab1">
-              <div class="item min var"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab2">
-              <div class="item min var"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab2">
-              <div class="item min atr"></div>
-              <div class="item min fun"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab3">
-              <div class="item min atr"></div>
-              <div class="item min fun"></div>
-              <div class="item lrg fun"></div>
-              <div class="item lrg cont"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab3">
-              <div class="item min atr"></div>
-              <div class="item min fun"></div>
-              <div class="item lrg atr"></div>
-              <div class="item lrg cont"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab4">
-              <div class="item min fun"></div>
-              <div class="item lrg atr"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab1">
-              <div class="item atr"></div>
-              <div class="item var"></div>
-              <div class="item cont"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab3">
-              <div class="item min var"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line tab4">
-              <div class="item min atr"></div>
-              <div class="item min fun"></div>
-              <div class="item lrg atr"></div>
-              <div class="item lrg cont"></div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="line">
-              <div class="item min var"></div>
-              <div class="clearfix"></div>
-            </div>
-          </div>
-        </div>
-        <div class="base"></div>
-      </div>
+        </footer>
     </div>
-  </body>
+
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/fullpage.min.js"></script>
+    <script src="assets/js/canvas.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
+
 </html>
