--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hamza ATILGAN | Front-End Developer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="owner" content="Cüneyd BÖLÜKOĞLU">
+    <meta name="owner" content="Hamza ATILGAN">
     <meta name="Copyright" content="(c) 2020">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="assets/css/fullpage.min.css">
@@ -114,10 +114,10 @@
 
         <footer>
             <div class="social_link animated bounceInUp faster">
-                <a href="https://github.com/cuneydbolukoglu"><i class="fab fa-github"></i></a>
-                <a href="https://codepen.io/cuneyd"><i class="fab fa-codepen"></i></a>
-                <a href="https://www.linkedin.com/in/cuneydbolukoglu/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="mailto:cuneydbolukogluu@gmail.com"><i class="far fa-envelope"></i></a>
+                <a href="https://github.com/hamzaatilgan"><i class="fab fa-github"></i></a>
+                <a href="https://codepen.io/Hamza-Atlgan"><i class="fab fa-codepen"></i></a>
+                <a href="https://www.linkedin.com/in/hamza-atilgan-4953471ba/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:hmzatlgn@gmail.com"><i class="far fa-envelope"></i></a>
             </div>
         </footer>
     </div>
