--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="content-rt animated bounceInRight faster">
                     <h1>Hamza ATILGAN</h1>
-                    <h2>Front-End Developer</h2>
+                    <h2>Sr. Business Analyst § Front-End Developer</h2>
                 </div>
 
             </div>
