--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col-md-6">
                         <h3>About Me.</h3>
-                        <p>Hi, I'm Hamza. I am a <b>Front-end developer,</b>
+                        <p>Hi, I'm Hamza. I am a <b>Sr. Business Analyst § Front-end developer,</b>
                             I create great sites and web applications with HTML and CSS and decorate them with
                             <b>Javascript.</b>
                         </p>
@@ -93,7 +93,7 @@
 
         <footer>
             <div class="social_link animated bounceInUp faster">
-                <a href="https://github.com/hamzaatilgan"><i class="fab fa-github"></i></a>
+                <a href="   "><i class="fab fa-github"></i></a>
                 <a href="https://codepen.io/Hamza-Atlgan"><i class="fab fa-codepen"></i></a>
                 <a href="https://www.linkedin.com/in/hamza-atilgan-4953471ba/"><i class="fab fa-linkedin-in"></i></a>
                 <a href="mailto:hmzatlgn@gmail.com"><i class="far fa-envelope"></i></a>
