Title and text update

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="content-rt animated bounceInRight faster">
                     <h1>Hamza ATILGAN</h1>
-                    <h2>Sr. Business Analyst § <br> Developer</h2>
+                    <h2>Sr. Business Analyst & <br> Mobile React Native Developer</h2>
                 </div>
 
             </div>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col-md-6">
                         <h3>About Me.</h3>
-                        <p>Hi, I'm Hamza. I am a <b>Sr. Business Analyst § Front-end developer,</b>
+                        <p>Hi, I'm Hamza. I am a <b>Sr. Business Analyst & mobile react native developer,</b>
                             I create great sites and web applications with HTML and CSS and decorate them with
                             <b>Javascript.</b>
                         </p>
@@ -63,6 +63,8 @@
                             products by using BOOTSTRAP technologies. You can follow my works on <b><a class="link_a"
                                     href="https://github.com/hamzaatilgan">GitHub</a></b> and
                             <b><a class="link_a" href="https://codepen.io/Hamza-Atlgan">CodePen</a>.</b>
+                            <br>
+                            My inspiration ; Yasin Kalkan & Cüneyd Bölükoğlu
                         </p>
                         <a href="#" target="_download"> <svg version="1.1" id="Capa_1"
                                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
