[fix] Update title
Co-Authored-By: Yasin B. Kalkan <yasinburakkalkan@gmail.com>

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="content-rt animated bounceInRight faster">
                     <h1>Hamza ATILGAN</h1>
-                    <h2>Sr. Business Analyst & <br> Mobile React Native Developer</h2>
+                    <h2>React Native Developer</h2>
                 </div>
 
             </div>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col-md-6">
                         <h3>About Me.</h3>
-                        <p>Hi, I'm Hamza. I am a <b>Sr. Business Analyst & mobile react native developer,</b>
+                        <p>Hi, I'm Hamza. I am a react native developer,</b>
                             I create great sites and web applications with HTML and CSS and decorate them with
                             <b>Javascript.</b>
                         </p>
