--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hamza ATILGAN | Front-End Developer / Product Owner </title>
+    <title>Hamza ATILGAN | Product Owner </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="owner" content="Hamza ATILGAN">
