--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="content-rt animated bounceInRight faster">
                     <h1>Hamza ATILGAN</h1>
-                    <h2>React Native Developer - Product Owner</h2>
+                    <h2>Product Owner - React Native Developer</h2>
                 </div>
 
             </div>
@@ -55,16 +55,14 @@
                     </div>
                     <div class="col-md-6">
                         <h3>About Me.</h3>
-                        <p>Hi, I'm Hamza. I am a react native developer,</b>
-                            I create great sites and web applications with HTML and CSS and decorate them with
+                        <p>Hi, I'm Hamza. I am a React Native Developer and also work as a Product Owner, combining my technical skills with a strong understanding of product lifecycle and user needs.</b>
+                            I create robust and responsive websites and web applications using HTML, CSS, and enhance them with
                             <b>Javascript.</b>
                         </p>
-                        <p>Photoshop, Sketch, Adobe XD, Figma, Zeplin etc. I create responsive and mobile compatible
-                            products by using BOOTSTRAP technologies. You can follow my works on <b><a class="link_a"
+                        <p>I have hands-on experience with Photoshop, Sketch, Adobe XD, Figma, Zeplin, and I use Bootstrap to build responsive, mobile-compatible products. I am actively involved in Agile/Scrum and Kanban methodologies and manage product workflows using Jira. In addition to front-end development, I also have experience with SQL for data querying, and I work with SOAP UI for API testing. I'm familiar with XML and capable of reading and interpreting structured data formats.
+                            You can follow some of my works on <b><a class="link_a"
                                     href="https://github.com/hamzaatilgan">GitHub</a></b> and
                             <b><a class="link_a" href="https://codepen.io/Hamza-Atlgan">CodePen</a>.</b>
-                            <br>
-                            My inspiration ; Yasin Kalkan & Cüneyd Bölükoğlu
                         </p>
                         <a href="#" target="_download"> <svg version="1.1" id="Capa_1"
                                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
